--- a/lancer/src/App.css
+++ b/lancer/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.mainSplash {
+  /*background: url(/assets/banner.jpg);
+    background: linear-gradient(#848EAB,#3454AD);
+  */
+  background-image: url(assets/banner.jpg);
+  background-size: 100%;
+  height: 80vh;
+  text-align: center;
+}
+
+.titleHeader {
+  margin-top: ;
+  text-align: left;
+}
