--- a/lancer/src/App.css
+++ b/lancer/src/App.css
@@ -42,12 +42,25 @@
     background: linear-gradient(#848EAB,#3454AD);
   */
   background-image: url(assets/banner.jpg);
-  background-size: 100%;
-  height: 80vh;
+  background-size: cover;
+  background-repeat: no-repeat;
   text-align: center;
+  height: 100%;
 }
 
 .titleHeader {
   margin-top: ;
   text-align: left;
+}
+
+.splash{
+height: 90%;
+}
+
+.footer{
+  height: 5%;
+}
+
+.header{
+  height: 5%;
 }
