--- a/lancer/src/App.css
+++ b/lancer/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .App-logo {
@@ -46,21 +48,31 @@
   background-repeat: no-repeat;
   text-align: center;
   height: 100%;
+  margin: 0;
 }
 
 .titleHeader {
-  margin-top: ;
   text-align: left;
 }
 
 .splash{
-height: 90%;
+height: 100%;
 }
 
-.footer{
-  height: 5%;
+#header{
+  width: 100%;
+  position:absolute; top:0px; left:0px; height: 70px; right:0px;overflow:hidden;
 }
 
-.header{
-  height: 5%;
+#footer{
+  width: 100%;
+  position:absolute; bottom:0px; height:70px; left:0px; right:0px; overflow:hidden;
+}
+
+#content{
+  position:absolute; top:70px;
+  bottom:70px;
+   left:0px;
+    right:0px;
+     overflow:auto;
 }
